# austin-twin

./: NUMBERS.md  README.md  main.tex  pyproject.toml
outputs/: baseline_comparison.txt  bootstrap_uncertainty.json  calibrated_config.json  calibrated_config_era5.json  calibrated_config_pm.json  calibrated_config_two_stage.json  cooling_response.txt  extended_validation.txt  extended_validation_selection.json  extended_validation_ship.json  extended_validation_ship.txt  scenario_summary.txt  scenario_summary_era5.txt  scenario_summary_pm.txt  scenario_summary_worldcover.txt  transfer_denver.json  transfer_miami.json  transfer_phoenix.json  zone_ranking.txt
scripts/: bootstrap_uncertainty.py  run_baseline_comparison.py  run_calibration.py  run_cooling_response.py  run_counterfactuals.py  run_era5_calibration.py  run_era5_downstream.py  run_era5_fetch.py  run_extended_validation.py  run_extended_validation_ship.py  run_mvp.py  run_osm_mvp.py  run_pm_calibration.py  run_pm_downstream.py  run_targeted.py  run_transfer.py  run_two_stage_calibration.py  run_validation.py  run_worldcover_mvp.py
src/austin_twin/: baseline_regression.py  calibration.py  cities.py  cooling_response.py  counterfactual.py  era5.py  forcing.py  grid.py  modis.py  osm_landuse.py  penman_monteith.py  sensitivity.py  simulator.py  synthetic.py  viz.py  worldcover.py
