[project]
name = "austin-twin"
version = "0.0.1"
description = "Digital twin of Austin for urban heat dynamics"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "osmnx>=1.9",
    "pyproj>=3.6",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "tqdm>=4.66",
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "scipy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
